--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -13,6 +13,7 @@ en:
 
   devise:
     failure:
+      not_approved: 'Your account has not been approved yet.'
       already_authenticated: 'You are already signed in.'
       unauthenticated: 'You need to sign in or sign up before continuing.'
       unconfirmed: 'You have to confirm your account before continuing.'
@@ -35,6 +36,7 @@ en:
       send_paranoid_instructions: 'If your email address exists in our database, you will receive an email with instructions about how to confirm your account in a few minutes.'
       confirmed: 'Your account was successfully confirmed. You are now signed in.'
     registrations:
+      signed_up_but_not_approved: 'You have signed up successfully but your account has not been approved yet'
       signed_up: 'Welcome! You have signed up successfully.'
       signed_up_but_unconfirmed: 'A message with a confirmation link has been sent to your email address. Please open the link to activate your account.'
       signed_up_but_inactive: 'You have signed up successfully. However, we could not sign you in because your account is not yet activated.'
